--- a/package.xml
+++ b/package.xml
@@ -51,8 +51,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>stdmsgs</build_depend>
-  <!-- is this supposed to be stdr_simulator/stdr_robot or just stdr_simulator?? idk -->
-  <build_depend>stdr_simulator/stdr_robot</build_depend>
+  <!-- dependency on stdr launchers!!!  -->
+  <build_depend>stdr_launchers</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>stdmsgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
