Update 8:33 PM. Robot drives forward and then stops. Woohoo! Now to make multiple robots, and also make the robots steer.

--- a/package.xml
+++ b/package.xml
@@ -53,6 +53,8 @@
   <build_depend>stdmsgs</build_depend>
   <!-- dependency on stdr launchers!!!  -->
   <build_depend>stdr_launchers</build_depend>
+  <!-- dependency on rqt_gui -->
+  <build_depend>rqt_gui</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>stdmsgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
